ContextMenu: avoid selection bubble on iOS long press

--- a/docs/src/app/(docs)/react/components/context-menu/demos/submenu/css-modules/index.module.css
+++ b/docs/src/app/(docs)/react/components/context-menu/demos/submenu/css-modules/index.module.css
@@ -11,6 +11,7 @@
   background-color: white;
   font-weight: 400;
   color: oklch(14.5% 0 0deg);
+  -webkit-user-select: none;
   user-select: none;
 
   @media (prefers-color-scheme: dark) {
